Changes for 3.3.0

New features:
..F....... [ZBX-10777] made checkboxes and radio buttons look the same across all browsers (asaveljevs, Pavel)
A.F.I..PS. [ZBXNEXT-3344] increased SNMP OID length limitation from 255 to 512 bytes; thanks to Patrick Hemmer for patch (Cemeris, Gunars, Sasha, viktors)
A.......S. [ZBX-9425] added permission check on the server side for global script execution (Sergejs)

Bug fixes:
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.2rc1

New features:
.......PS. [ZBXNEXT-2010] added vmware.hv.datastore.size keys for VMware datastore capacity monitoring (wiper)
........S. [ZBXNEXT-1859] improved performance by not inserting events of auto registration if no such action was enabled, insert/update/select in a bulk on auto registration data from proxy (Sasha, vso)
..FG.....T [ZBXNEXT-3487] added new key for virtual memory monitoring on Windows (vso, wiper)
A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped forward slash restriction in "Tag name" and "Tag for matching" (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
..F....... [ZBX-11390] fixed error hint displaying (Oleg)
..F....... [ZBX-11246] added disabled "delete" button for edit forms of templated item, item prototype, web scenario and discovery rule (Cemeris)
........S. [ZBX-11223] rewritten calculated item formula parsing, simple macro parsing and LLD macro parsing; fixed several problems with function parsing (gleb, Sergejs)
A......... [ZBX-11121] disallowed leaving user without linked user groups with usergroup.update, usergroup.massupdate, usergroup.delete API methods (Cemeris)