@@ -24,9 +24,9 @@ import java.net.InetAddress;
 
 class ConfigurationParameter
 {
-	public static final int TYPE_INTEGER = 0;
-	public static final int TYPE_INETADDRESS = 1;
-	public static final int TYPE_FILE = 2;
+	static final int TYPE_INTEGER = 0;
+	static final int TYPE_INETADDRESS = 1;
+	static final int TYPE_FILE = 2;
 
 	private String name;
 	private int type;
@@ -34,7 +34,7 @@ class ConfigurationParameter
 	private InputValidator validator;
 	private PostInputValidator postValidator;
 
-	public ConfigurationParameter(String name, int type, Object defaultValue, InputValidator validator, PostInputValidator postValidator)
+	ConfigurationParameter(String name, int type, Object defaultValue, InputValidator validator, PostInputValidator postValidator)
 	{
 		this.name = name;
 		this.type = type;
@@ -43,22 +43,22 @@ class ConfigurationParameter
 		this.postValidator = postValidator;
 	}
 
-	public String getName()
+	String getName()
 	{
 		return name;
 	}
 
-	public int getType()
+	int getType()
 	{
 		return type;
 	}
 
-	public Object getValue()
+	Object getValue()
 	{
 		return value;
 	}
 
-	public void setValue(String text)
+	void setValue(String text)
 	{
 		Object userValue = null;
 
